en /dashboard-admin/menu verifica que todos los textos tengan su traducc

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,78 +1,5 @@
 
 {
-  "Hello! Here is your bill for": "Hello! Here is your bill for",
-  "Thank you for your visit!": "Thank you for your visit!",
-  "Bill for": "Bill for",
-  "Qty": "Qty",
-  "Description": "Description",
-  "Amount": "Amount",
-  "Date": "Date",
-  "Request Bill": "Request Bill",
-  "Choose how to deliver the bill to the customer.": "Choose how to deliver the bill to the customer.",
-  "Send via WhatsApp": "Send via WhatsApp",
-  "Phone Number": "Phone Number",
-  "Enter phone number": "Enter phone number",
-  "Send": "Send",
-  "Print Ticket": "Print Ticket",
-  "Printer Type": "Printer Type",
-  "Select printer type": "Select printer type",
-  "Thermal Printer (80mm)": "Thermal Printer (80mm)",
-  "Conventional (A4)": "Conventional (A4)",
-  "Print Physical Ticket": "Print Physical Ticket",
-  "Register Payment": "Register Payment",
-  "Confirm the payment details to close the order.": "Confirm the payment details to close the order.",
-  "Paid Amount": "Paid Amount",
-  "Tip": "Tip",
-  "Payment Method": "Payment Method",
-  "Select a method": "Select a method",
-  "Cash": "Cash",
-  "Credit Card": "Credit Card",
-  "Debit Card": "Debit Card",
-  "Bank Transfer": "Bank Transfer",
-  "Other": "Other",
-  "Requires Invoice": "Requires Invoice",
-  "Name or Business Name": "Name or Business Name",
-  "RFC": "RFC",
-  "Fiscal Address": "Fiscal Address",
-  "Email": "Email",
-  "Confirm Payment & Close Order": "Confirm Payment & Close Order",
-  "Order Summary": "Order Summary",
-  "items pending": "{{count}} items pending",
-  "All items ready": "All items ready",
-  "Order Complete": "Order Complete",
-  "Table Served": "Table Served",
-  "Ready for pickup": "Ready for pickup",
-  "Diner": "Diner",
-  "Sub-account added": "Sub-account added",
-  "Could not add sub-account.": "Could not add sub-account.",
-  "Cannot Delete": "Cannot Delete",
-  "This sub-account has items and cannot be deleted.": "This sub-account has items and cannot be deleted.",
-  "Sub-account removed": "Sub-account removed",
-  "Could not remove sub-account.": "Could not remove sub-account.",
-  "Subtotal": "Subtotal",
-  "Taxes (16%)": "Taxes (16%)",
-  "Total": "Total",
-  "Split Account": "Split Account",
-  "Send to Kitchen": "Send to Kitchen",
-  "Acknowledge Pickup": "Acknowledge Pickup",
-  "Go to Payment": "Go to Payment",
-  "Cancel Order": "Cancel Order",
-  "Finalize and Close Order": "Finalize and Close Order",
-  "This action will permanently delete the current order. This cannot be undone.": "This action will permanently delete the current order. This cannot be undone.",
-  "Go Back": "Go Back",
-  "Yes, cancel order": "Yes, cancel order",
-  "This will mark the order as paid and update the table status. This action cannot be undone.": "This will mark the order as paid and update the table status. This action cannot be undone.",
-  "Yes, close order": "Yes, close order",
-  "No active order for this item.": "No active order for this item.",
-  "Pending": "Pending",
-  "Preparing": "Preparing",
-  "Ready": "Ready",
-  "Add to Order": "Add to Order",
-  "Add any specific preparation notes for this item.": "Add any specific preparation notes for this item.",
-  "Special Instructions for": "Special Instructions for",
-  "Search items...": "Search items...",
-  "Select a sub-account": "Select a sub-account",
-  "No menu categories found.": "No menu categories found.",
   "Administrator Dashboard": "Administrator Dashboard",
   "Manage your restaurant's operations.": "Manage your restaurant's operations.",
   "Modules": "Modules",
@@ -84,10 +11,32 @@
   "Deliveries": "Deliveries",
   "Reports": "Reports",
   "Digital Map": "Digital Map",
+  "My Account": "My Account",
+  "Theme": "Theme",
+  "Light": "Light",
+  "Dark": "Dark",
+  "System": "System",
+  "Language": "Language",
+  "Change Password": "Change Password",
+  "Log out": "Log out",
+  "Toggle navigation menu": "Toggle navigation menu",
+  "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
+  "New Password": "New Password",
+  "Confirm Password": "Confirm Password",
+  "Cancel": "Cancel",
+  "Save Changes": "Save Changes",
+  "Error": "Error",
+  "Passwords do not match.": "Passwords do not match.",
+  "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
+  "Success": "Success",
+  "Password updated successfully.": "Password updated successfully.",
+  "Error updating password": "Error updating password",
+  "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.",
+  "Dashboard": "Dashboard",
+  "Menu y recetas": "Menu & Recipes",
   "Order Management": "Order Management",
   "Select a table to start an order or manage an existing one.": "Select a table to start an order or manage an existing one.",
   "Register Takeout Order": "Register Takeout Order",
-  "Loading...": "Loading...",
   "Takeout": "Takeout",
   "No active takeout orders.": "No active takeout orders.",
   "No tables assigned to you in this area.": "No tables assigned to you in this area.",
@@ -95,6 +44,14 @@
   "Click on a table on the left to see its details or start a new order.": "Click on a table on the left to see its details or start a new order.",
   "Table": "Table",
   "Occupied": "Occupied",
+  "available": "available",
+  "open": "open",
+  "preparing": "preparing",
+  "billing": "billing",
+  "dirty": "dirty",
+  "reserved": "reserved",
+  "ready_for_pickup": "ready for pickup",
+  "served": "served",
   "This table is ready for a new order.": "This table is ready for a new order.",
   "Start New Order": "Start New Order",
   "Mark as Reserved": "Mark as Reserved",
@@ -105,7 +62,6 @@
   "Status Updated": "Status Updated",
   "is now": "is now",
   "Could not update table status.": "Could not update table status.",
-
   "An active order already exists for this table.": "An active order already exists for this table.",
   "Order Started": "Order Started",
   "is now occupied.": "is now occupied.",
@@ -113,12 +69,162 @@
   "Takeout Order Created": "Takeout Order Created",
   "has been created.": "has been created.",
   "Could not create takeout order.": "Could not create takeout order.",
-  "Order": "Order",
-  "available": "available",
-  "dirty": "dirty",
-  "reserved": "reserved",
-  "open": "open",
-  "preparing": "preparing",
-  "ready_for_pickup": "ready for pickup",
-  "served": "served"
+  "Add to Order": "Add to Order",
+  "Search items...": "Search items...",
+  "Select a sub-account": "Select a sub-account",
+  "General": "General",
+  "No menu categories found.": "No menu categories found.",
+  "Added": "Added!",
+  "has been added to the order.": "has been added to the order.",
+  "No active order or item selected.": "No active order or item selected.",
+  "Order document does not exist!": "Order document does not exist!",
+  "Could not add item to order.": "Could not add item to order.",
+  "Order Summary": "Order Summary",
+  "{{count}} items pending": "{{count}} items pending",
+  "All items ready": "All items ready",
+  "Order Complete": "Order Complete",
+  "Ready for pickup": "Ready for pickup",
+  "Table Served": "Table Served",
+  "Diner": "Diner",
+  "Add Item": "Add Item",
+  "Split Account": "Split Account",
+  "Subtotal": "Subtotal",
+  "Taxes (16%)": "Taxes (16%)",
+  "Total": "Total",
+  "Send to Kitchen": "Send to Kitchen",
+  "Order Sent": "Order Sent",
+  "The order has been sent to the kitchen.": "The order has been sent to the kitchen.",
+  "Could not send the order.": "Could not send the order.",
+  "Acknowledge Pickup": "Acknowledge Pickup",
+  "Order Served": "Order Served",
+  "The order has been marked as served.": "The order has been marked as served.",
+  "Could not update order status.": "Could not update order status.",
+  "Request Bill": "Request Bill",
+  "Go to Payment": "Go to Payment",
+  "Cancel Order": "Cancel Order",
+  "Are you sure?": "Are you sure?",
+  "This action will permanently delete the current order. This cannot be undone.": "This action will permanently delete the current order. This cannot be undone.",
+  "Go Back": "Go Back",
+  "Yes, cancel order": "Yes, cancel order",
+  "Finalize and Close Order": "Finalize and Close Order",
+  "This will mark the order as paid and update the table status. This action cannot be undone.": "This will mark the order as paid and update the table status. This action cannot be undone.",
+  "Yes, close order": "Yes, close order",
+  "Item Removed": "Item Removed",
+  "The item has been removed from the order.": "The item has been removed from the order.",
+  "Could not remove the item.": "Could not remove the item.",
+  "Could not add sub-account.": "Could not add sub-account.",
+  "Sub-account added": "Sub-account added",
+  "Sub-account removed": "Sub-account removed",
+  "Could not remove sub-account.": "Could not remove sub-account.",
+  "Cannot Delete": "Cannot Delete",
+  "This sub-account has items and cannot be deleted.": "This sub-account has items and cannot be deleted.",
+  "Pending": "Pending",
+  "Preparing": "Preparing",
+  "Ready": "Ready",
+  "Cannot Remove": "Cannot Remove",
+  "This item is already prepared and cannot be removed.": "This item is already prepared and cannot be removed.",
+  "Loading...": "Loading...",
+  "Manage your recipes and menu items.": "Manage your recipes and menu items.",
+  "Create Recipe": "Create Recipe",
+  "Add a new technical sheet for a dish.": "Add a new technical sheet for a dish.",
+  "Create": "Create",
+  "Create New Recipe": "Create New Recipe",
+  "Define the ingredients and cost for a new dish.": "Define the ingredients and cost for a new dish.",
+  "Create Menu Item": "Create Menu Item",
+  "Add a new dish to your public menu.": "Add a new dish to your public menu.",
+  "Add a new dish to your menu, linking it to a recipe.": "Add a new dish to your menu, linking it to a recipe.",
+  "Existing Recipes": "Existing Recipes",
+  "View and manage your current recipes.": "View and manage your current recipes.",
+  "Menu Items": "Menu Items",
+  "View and manage your current menu dishes.": "View and manage your current menu dishes.",
+  "Update Successful": "Update Successful",
+  "The recipe has been updated.": "The recipe has been updated.",
+  "Recipe Added": "Recipe Added",
+  "The new recipe has been added.": "The new recipe has been added.",
+  "Save Error": "Save Error",
+  "Could not save the recipe information.": "Could not save the recipe information.",
+  "Recipe Name": "Recipe Name",
+  "e.g., Tacos al Pastor": "e.g., Tacos al Pastor",
+  "Ingredients": "Ingredients",
+  "Ingredient": "Ingredient",
+  "Quantity": "Quantity",
+  "Unit": "Unit",
+  "Select an item": "Select an item",
+  "Add Ingredient": "Add Ingredient",
+  "Total Cost": "Total Cost",
+  "Update Recipe": "Update Recipe",
+  "Save Recipe": "Save Recipe",
+  "Recipe Details": "Recipe Details",
+  "Cost": "Cost",
+  "RECIPE": "RECIPE",
+  "TOTAL COST": "TOTAL COST",
+  "Actions": "Actions",
+  "Open menu": "Open menu",
+  "Edit": "Edit",
+  "Delete": "Delete",
+  "This will permanently delete the recipe.": "This will permanently delete the recipe.",
+  "Yes, delete": "Yes, delete",
+  "No recipes found.": "No recipes found.",
+  "Recipe in Use": "Recipe in Use",
+  "This recipe is used by {{count}} menu item(s). Please remove them before deleting the recipe.": "This recipe is used by {{count}} menu item(s). Please remove them before deleting the recipe.",
+  "Edit Recipe": "Edit Recipe",
+  "Modify the recipe details.": "Modify the recipe details.",
+  "None (direct from inventory)": "None (direct from inventory)",
+  "Select a recipe (optional)": "Select a recipe (optional)",
+  "Select Inventory Item": "Select Inventory Item",
+  "Search item...": "Search item...",
+  "No item found.": "No item found.",
+  "Select an item...": "Select an item...",
+  "Dish Name": "Dish Name",
+  "e.g., Aztec Burger": "e.g., Aztec Burger",
+  "Description": "Description",
+  "e.g., Juicy beef patty with avocado and chipotle sauce.": "e.g., Juicy beef patty with avocado and chipotle sauce.",
+  "Category": "Category",
+  "Select a category": "Select a category",
+  "Add new category": "Add new category",
+  "Sale Price ($)": "Sale Price ($)",
+  "Preparation Responsible": "Preparation Responsible",
+  "Select a responsible": "Select a responsible",
+  "Add new": "Add new",
+  "Estimated preparation time (mins)": "Estimated preparation time (mins)",
+  "Image (Optional)": "Image (Optional)",
+  "Update Item": "Update Item",
+  "Add to Menu": "Add to Menu",
+  "Add New Category": "Add New Category",
+  "Create a new category for your menu items.": "Create a new category for your menu items.",
+  "Category Name": "Category Name",
+  "e.g., Appetizers": "e.g., Appetizers",
+  "Save Category": "Save Category",
+  "Add New Responsible": "Add New Responsible",
+  "Create a new responsible for preparation.": "Create a new responsible for preparation.",
+  "Responsible Name": "Responsible Name",
+  "e.g., Barista": "e.g., Barista",
+  "Save Responsible": "Save Responsible",
+  "Category name cannot be empty.": "Category name cannot be empty.",
+  "Category Added": "Category Added",
+  "The new category has been added.": "The new category has been added.",
+  "Could not add the category.": "Could not add the category.",
+  "Responsible name cannot be empty.": "Responsible name cannot be empty.",
+  "Responsible Added": "Responsible Added",
+  "The new responsible has been added.": "The new responsible has been added.",
+  "Could not add the responsible.": "Could not add the responsible.",
+  "The menu item has been updated.": "The menu item has been updated.",
+  "Menu Item Added": "Menu Item Added",
+  "The new item has been added to the menu.": "The new item has been added to the menu.",
+  "Could not save the menu item information.": "Could not save the menu item information.",
+  "None": "None",
+  "Uncategorized": "Uncategorized",
+  "Not specified": "Not specified",
+  "Item Deleted": "Item Deleted",
+  "The menu item has been removed.": "The menu item has been removed.",
+  "Could not delete the menu item.": "Could not delete the menu item.",
+  "Edit Menu Item": "Edit Menu Item",
+  "Modify the dish details.": "Modify the dish details.",
+  "DISH": "DISH",
+  "CATEGORY": "CATEGORY",
+  "RESPONSIBLE": "RESPONSIBLE",
+  "PREP. TIME": "PREP. TIME",
+  "PRICE": "PRICE",
+  "This will permanently delete the menu item.": "This will permanently delete the menu item.",
+  "No menu items found.": "No menu items found."
 }
