--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,78 +1,5 @@
 
 {
-  "Hello! Here is your bill for": "¡Hola! Aquí está tu cuenta para",
-  "Thank you for your visit!": "¡Gracias por tu visita!",
-  "Bill for": "Cuenta para",
-  "Qty": "Cant",
-  "Description": "Descripción",
-  "Amount": "Importe",
-  "Date": "Fecha",
-  "Request Bill": "Pedir Cuenta",
-  "Choose how to deliver the bill to the customer.": "Elige cómo entregar la cuenta al cliente.",
-  "Send via WhatsApp": "Enviar por WhatsApp",
-  "Phone Number": "Número de Teléfono",
-  "Enter phone number": "Ingresa el número de teléfono",
-  "Send": "Enviar",
-  "Print Ticket": "Imprimir Ticket",
-  "Printer Type": "Tipo de Impresora",
-  "Select printer type": "Selecciona el tipo de impresora",
-  "Thermal Printer (80mm)": "Impresora Térmica (80mm)",
-  "Conventional (A4)": "Convencional (A4)",
-  "Print Physical Ticket": "Imprimir Ticket Físico",
-  "Register Payment": "Registrar Pago",
-  "Confirm the payment details to close the order.": "Confirma los detalles del pago para cerrar la orden.",
-  "Paid Amount": "Monto Pagado",
-  "Tip": "Propina",
-  "Payment Method": "Método de Pago",
-  "Select a method": "Selecciona un método",
-  "Cash": "Efectivo",
-  "Credit Card": "Tarjeta de Crédito",
-  "Debit Card": "Tarjeta de Débito",
-  "Bank Transfer": "Transferencia Bancaria",
-  "Other": "Otro",
-  "Requires Invoice": "Requiere Factura",
-  "Name or Business Name": "Nombre o Razón Social",
-  "RFC": "RFC",
-  "Fiscal Address": "Dirección Fiscal",
-  "Email": "Correo Electrónico",
-  "Confirm Payment & Close Order": "Confirmar Pago y Cerrar Orden",
-  "Order Summary": "Resumen de la Orden",
-  "items pending": "{{count}} artículos pendientes",
-  "All items ready": "Todos los artículos listos",
-  "Order Complete": "Orden Completa",
-  "Table Served": "Mesa Servida",
-  "Ready for pickup": "Listo para recoger",
-  "Diner": "Comensal",
-  "Sub-account added": "Subcuenta agregada",
-  "Could not add sub-account.": "No se pudo agregar la subcuenta.",
-  "Cannot Delete": "No se puede eliminar",
-  "This sub-account has items and cannot be deleted.": "Esta subcuenta tiene artículos y no se puede eliminar.",
-  "Sub-account removed": "Subcuenta eliminada",
-  "Could not remove sub-account.": "No se pudo eliminar la subcuenta.",
-  "Subtotal": "Subtotal",
-  "Taxes (16%)": "IVA (16%)",
-  "Total": "Total",
-  "Split Account": "Dividir Cuenta",
-  "Send to Kitchen": "Enviar a Cocina",
-  "Acknowledge Pickup": "Confirmar Recogido",
-  "Go to Payment": "Ir a Pagar",
-  "Cancel Order": "Cancelar Orden",
-  "Finalize and Close Order": "Finalizar y Cerrar Orden",
-  "This action will permanently delete the current order. This cannot be undone.": "Esta acción eliminará permanentemente la orden actual. Esto no se puede deshacer.",
-  "Go Back": "Regresar",
-  "Yes, cancel order": "Sí, cancelar orden",
-  "This will mark the order as paid and update the table status. This action cannot be undone.": "Esto marcará la orden como pagada y actualizará el estado de la mesa. Esta acción no se puede deshacer.",
-  "Yes, close order": "Sí, cerrar orden",
-  "No active order for this item.": "No hay orden activa para este artículo.",
-  "Pending": "Pendiente",
-  "Preparing": "En preparación",
-  "Ready": "Listo",
-  "Add to Order": "Agregar a la Orden",
-  "Add any specific preparation notes for this item.": "Agrega cualquier nota de preparación específica para este platillo.",
-  "Special Instructions for": "Instrucciones Especiales para",
-  "Search items...": "Buscar platillos...",
-  "Select a sub-account": "Selecciona una subcuenta",
-  "No menu categories found.": "No se encontraron categorías de menú.",
   "Administrator Dashboard": "Dashboard de Administrador",
   "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
   "Modules": "Módulos",
@@ -84,17 +11,47 @@
   "Deliveries": "Repartos",
   "Reports": "Reportes",
   "Digital Map": "Mapa Digital",
+  "My Account": "Mi Cuenta",
+  "Theme": "Tema",
+  "Light": "Claro",
+  "Dark": "Oscuro",
+  "System": "Sistema",
+  "Language": "Idioma",
+  "Change Password": "Cambiar Contraseña",
+  "Log out": "Cerrar Sesión",
+  "Toggle navigation menu": "Alternar menú de navegación",
+  "Enter your new password below. After saving, you will be logged out for security.": "Introduce tu nueva contraseña. Después de guardar, se cerrará tu sesión por seguridad.",
+  "New Password": "Nueva Contraseña",
+  "Confirm Password": "Confirmar Contraseña",
+  "Cancel": "Cancelar",
+  "Save Changes": "Guardar Cambios",
+  "Error": "Error",
+  "Passwords do not match.": "Las contraseñas no coinciden.",
+  "Password must be at least 6 characters long.": "La contraseña debe tener al menos 6 caracteres.",
+  "Success": "Éxito",
+  "Password updated successfully.": "Contraseña actualizada correctamente.",
+  "Error updating password": "Error al actualizar la contraseña",
+  "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "Esta operación es sensible y requiere autenticación reciente. Por favor, cierra sesión y vuelve a iniciarla para cambiar tu contraseña.",
+  "Dashboard": "Dashboard",
+  "Menu y recetas": "Menú y recetas",
   "Order Management": "Gestión de Órdenes",
   "Select a table to start an order or manage an existing one.": "Selecciona una mesa para iniciar una orden o gestionar una existente.",
   "Register Takeout Order": "Registrar Orden para Llevar",
-  "Loading...": "Cargando...",
-  "Takeout": "Para llevar",
+  "Takeout": "Para Llevar",
   "No active takeout orders.": "No hay órdenes para llevar activas.",
   "No tables assigned to you in this area.": "No tienes mesas asignadas en esta área.",
   "Select a table to begin.": "Selecciona una mesa para comenzar.",
   "Click on a table on the left to see its details or start a new order.": "Haz clic en una mesa a la izquierda para ver sus detalles o iniciar una nueva orden.",
   "Table": "Mesa",
   "Occupied": "Ocupada",
+  "available": "disponible",
+  "open": "abierta",
+  "preparing": "en preparación",
+  "billing": "facturando",
+  "dirty": "sucia",
+  "reserved": "reservada",
+  "ready_for_pickup": "lista para recoger",
+  "served": "servida",
   "This table is ready for a new order.": "Esta mesa está lista para una nueva orden.",
   "Start New Order": "Iniciar Nueva Orden",
   "Mark as Reserved": "Marcar como Reservada",
@@ -105,20 +62,169 @@
   "Status Updated": "Estado Actualizado",
   "is now": "ahora está",
   "Could not update table status.": "No se pudo actualizar el estado de la mesa.",
-
   "An active order already exists for this table.": "Ya existe una orden activa para esta mesa.",
   "Order Started": "Orden Iniciada",
-  "is now occupied.": "ahora está ocupada.",
+  "is now occupied.": "está ahora ocupada.",
   "Could not start a new order.": "No se pudo iniciar una nueva orden.",
-  "Takeout Order Created": "Orden para Llevar Creada",
+  "Takeout Order Created": "Orden para llevar creada",
   "has been created.": "ha sido creada.",
   "Could not create takeout order.": "No se pudo crear la orden para llevar.",
-  "Order": "Orden",
-  "available": "disponible",
-  "dirty": "sucia",
-  "reserved": "reservada",
-  "open": "abierta",
-  "preparing": "en preparación",
-  "ready_for_pickup": "lista para recoger",
-  "served": "servida"
+  "Add to Order": "Añadir a la Orden",
+  "Search items...": "Buscar platillos...",
+  "Select a sub-account": "Seleccionar una sub-cuenta",
+  "General": "General",
+  "No menu categories found.": "No se encontraron categorías de menú.",
+  "Added": "¡Añadido!",
+  "has been added to the order.": "ha sido añadido a la orden.",
+  "No active order or item selected.": "No hay una orden activa o platillo seleccionado.",
+  "Order document does not exist!": "¡El documento de la orden no existe!",
+  "Could not add item to order.": "No se pudo añadir el platillo a la orden.",
+  "Order Summary": "Resumen de la Orden",
+  "{{count}} items pending": "{{count}} platillos pendientes",
+  "All items ready": "Todos los platillos listos",
+  "Order Complete": "Orden Completa",
+  "Ready for pickup": "Listo para recoger",
+  "Table Served": "Mesa Servida",
+  "Diner": "Comensal",
+  "Add Item": "Añadir Platillo",
+  "Split Account": "Dividir Cuenta",
+  "Subtotal": "Subtotal",
+  "Taxes (16%)": "IVA (16%)",
+  "Total": "Total",
+  "Send to Kitchen": "Enviar a Cocina",
+  "Order Sent": "Orden Enviada",
+  "The order has been sent to the kitchen.": "La orden ha sido enviada a la cocina.",
+  "Could not send the order.": "No se pudo enviar la orden.",
+  "Acknowledge Pickup": "Confirmar Recogida",
+  "Order Served": "Orden Servida",
+  "The order has been marked as served.": "La orden ha sido marcada como servida.",
+  "Could not update order status.": "No se pudo actualizar el estado de la orden.",
+  "Request Bill": "Solicitar Cuenta",
+  "Go to Payment": "Ir a Pagar",
+  "Cancel Order": "Cancelar Orden",
+  "Are you sure?": "¿Estás seguro?",
+  "This action will permanently delete the current order. This cannot be undone.": "Esta acción eliminará permanentemente la orden actual. Esto no se puede deshacer.",
+  "Go Back": "Regresar",
+  "Yes, cancel order": "Sí, cancelar orden",
+  "Finalize and Close Order": "Finalizar y Cerrar Orden",
+  "This will mark the order as paid and update the table status. This action cannot be undone.": "Esto marcará la orden como pagada y actualizará el estado de la mesa. Esta acción no se puede deshacer.",
+  "Yes, close order": "Sí, cerrar orden",
+  "Item Removed": "Platillo Eliminado",
+  "The item has been removed from the order.": "El platillo ha sido eliminado de la orden.",
+  "Could not remove the item.": "No se pudo eliminar el platillo.",
+  "Could not add sub-account.": "No se pudo añadir la sub-cuenta.",
+  "Sub-account added": "Sub-cuenta añadida",
+  "Sub-account removed": "Sub-cuenta eliminada",
+  "Could not remove sub-account.": "No se pudo eliminar la sub-cuenta.",
+  "Cannot Delete": "No se puede eliminar",
+  "This sub-account has items and cannot be deleted.": "Esta sub-cuenta tiene platillos y no se puede eliminar.",
+  "Pending": "Pendiente",
+  "Preparing": "Preparando",
+  "Ready": "Listo",
+  "Cannot Remove": "No se puede eliminar",
+  "This item is already prepared and cannot be removed.": "Este platillo ya está preparado y no se puede eliminar.",
+  "Loading...": "Cargando...",
+  "Manage your recipes and menu items.": "Gestiona tus recetas y los elementos del menú.",
+  "Create Recipe": "Crear Receta",
+  "Add a new technical sheet for a dish.": "Añade una nueva ficha técnica para un platillo.",
+  "Create": "Crear",
+  "Create New Recipe": "Crear Nueva Receta",
+  "Define the ingredients and cost for a new dish.": "Define los ingredientes y el coste para un nuevo platillo.",
+  "Create Menu Item": "Crear Elemento de Menú",
+  "Add a new dish to your public menu.": "Añade un nuevo platillo a tu menú público.",
+  "Add a new dish to your menu, linking it to a recipe.": "Añade un nuevo platillo a tu menú, vinculándolo a una receta.",
+  "Existing Recipes": "Recetas Existentes",
+  "View and manage your current recipes.": "Ve y gestiona tus recetas actuales.",
+  "Menu Items": "Elementos del Menú",
+  "View and manage your current menu dishes.": "Ve y gestiona los platillos de tu menú actual.",
+  "Update Successful": "Actualización Exitosa",
+  "The recipe has been updated.": "La receta ha sido actualizada.",
+  "Recipe Added": "Receta Añadida",
+  "The new recipe has been added.": "La nueva receta ha sido añadida.",
+  "Save Error": "Error al Guardar",
+  "Could not save the recipe information.": "No se pudo guardar la información de la receta.",
+  "Recipe Name": "Nombre de la Receta",
+  "e.g., Tacos al Pastor": "ej., Tacos al Pastor",
+  "Ingredients": "Ingredientes",
+  "Ingredient": "Ingrediente",
+  "Quantity": "Cantidad",
+  "Unit": "Unidad",
+  "Select an item": "Selecciona un insumo",
+  "Add Ingredient": "Añadir Ingrediente",
+  "Total Cost": "Costo Total",
+  "Update Recipe": "Actualizar Receta",
+  "Save Recipe": "Guardar Receta",
+  "Recipe Details": "Detalles de la Receta",
+  "Cost": "Costo",
+  "RECIPE": "RECETA",
+  "TOTAL COST": "COSTO TOTAL",
+  "Actions": "Acciones",
+  "Open menu": "Abrir menú",
+  "Edit": "Editar",
+  "Delete": "Eliminar",
+  "This will permanently delete the recipe.": "Esto eliminará permanentemente la receta.",
+  "Yes, delete": "Sí, eliminar",
+  "No recipes found.": "No se encontraron recetas.",
+  "Recipe in Use": "Receta en Uso",
+  "This recipe is used by {{count}} menu item(s). Please remove them before deleting the recipe.": "Esta receta es utilizada por {{count}} elemento(s) del menú. Por favor, elimínalos antes de borrar la receta.",
+  "Edit Recipe": "Editar Receta",
+  "Modify the recipe details.": "Modificar los detalles de la receta.",
+  "None (direct from inventory)": "Ninguna (directo de inventario)",
+  "Select a recipe (optional)": "Selecciona una receta (opcional)",
+  "Select Inventory Item": "Seleccionar Insumo de Inventario",
+  "Search item...": "Buscar insumo...",
+  "No item found.": "No se encontró el insumo.",
+  "Select an item...": "Selecciona un insumo...",
+  "Dish Name": "Nombre del Platillo",
+  "e.g., Aztec Burger": "ej., Hamburguesa Azteca",
+  "Description": "Descripción",
+  "e.g., Juicy beef patty with avocado and chipotle sauce.": "ej., Jugosa carne de res con aguacate y salsa de chipotle.",
+  "Category": "Categoría",
+  "Select a category": "Selecciona una categoría",
+  "Add new category": "Añadir nueva categoría",
+  "Sale Price ($)": "Precio de Venta ($)",
+  "Preparation Responsible": "Responsable de Preparación",
+  "Select a responsible": "Selecciona un responsable",
+  "Add new": "Añadir nuevo",
+  "Estimated preparation time (mins)": "Tiempo estimado de preparación (min)",
+  "Image (Optional)": "Imagen (Opcional)",
+  "Update Item": "Actualizar Platillo",
+  "Add to Menu": "Añadir al Menú",
+  "Add New Category": "Añadir Nueva Categoría",
+  "Create a new category for your menu items.": "Crea una nueva categoría para tus elementos del menú.",
+  "Category Name": "Nombre de la Categoría",
+  "e.g., Appetizers": "ej., Entradas",
+  "Save Category": "Guardar Categoría",
+  "Add New Responsible": "Añadir Nuevo Responsable",
+  "Create a new responsible for preparation.": "Crea un nuevo responsable de preparación.",
+  "Responsible Name": "Nombre del Responsable",
+  "e.g., Barista": "ej., Barista",
+  "Save Responsible": "Guardar Responsable",
+  "Category name cannot be empty.": "El nombre de la categoría no puede estar vacío.",
+  "Category Added": "Categoría Añadida",
+  "The new category has been added.": "La nueva categoría ha sido añadida.",
+  "Could not add the category.": "No se pudo añadir la categoría.",
+  "Responsible name cannot be empty.": "El nombre del responsable no puede estar vacío.",
+  "Responsible Added": "Responsable Añadido",
+  "The new responsible has been added.": "El nuevo responsable ha sido añadido.",
+  "Could not add the responsible.": "No se pudo añadir el responsable.",
+  "The menu item has been updated.": "El elemento del menú ha sido actualizado.",
+  "Menu Item Added": "Elemento de Menú Añadido",
+  "The new item has been added to the menu.": "El nuevo platillo ha sido añadido al menú.",
+  "Could not save the menu item information.": "No se pudo guardar la información del elemento del menú.",
+  "None": "Ninguno",
+  "Uncategorized": "Sin categoría",
+  "Not specified": "No especificado",
+  "Item Deleted": "Elemento Eliminado",
+  "The menu item has been removed.": "El elemento del menú ha sido eliminado.",
+  "Could not delete the menu item.": "No se pudo eliminar el elemento del menú.",
+  "Edit Menu Item": "Editar Elemento del Menú",
+  "Modify the dish details.": "Modificar los detalles del platillo.",
+  "DISH": "PLATILLO",
+  "CATEGORY": "CATEGORÍA",
+  "RESPONSIBLE": "RESPONSABLE",
+  "PREP. TIME": "T. PREP.",
+  "PRICE": "PRECIO",
+  "This will permanently delete the menu item.": "Esto eliminará permanentemente el elemento del menú.",
+  "No menu items found.": "No se encontraron elementos en el menú."
 }
