--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,66 +1,6 @@
+
 {
-  "Welcome back, {{name}}!": "¡Bienvenido de nuevo, {{name}}!",
-  "Login Successful": "Inicio de Sesión Exitoso",
-  "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
-  "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado inválido.",
-  "The email or password are incorrect.": "El correo electrónico o la contraseña son incorrectos.",
-  "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
-  "Login Failed": "Falló el Inicio de Sesión",
-  "Email required": "Correo electrónico requerido",
-  "Please enter your email to reset your password.": "Por favor, ingresa tu correo electrónico para restablecer tu contraseña.",
-  "Recovery email sent": "Correo de recuperación enviado",
-  "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
-  "Error": "Error",
-  "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, inténtalo de nuevo.",
-  "No user found with that email address.": "No se encontró ningún usuario con esa dirección de correo electrónico.",
-  "User (email)": "Usuario (correo electrónico)",
-  "Password": "Contraseña",
-  "Remember me": "Recordarme",
-  "Forgot your password?": "¿Olvidaste tu contraseña?",
-  "LOG IN": "INICIAR SESIÓN",
-  "Hide password": "Ocultar contraseña",
-  "Show password": "Mostrar contraseña",
-  "The first step to elevate your restaurant": "El primer paso para elevar tu restaurante",
-  "Already have an account? Log in": "¿Ya tienes una cuenta? Inicia sesión",
-  "Register Your Restaurant": "Registra Tu Restaurante",
-  "Take the first step to elevate your restaurant.": "Da el primer paso para elevar tu restaurante.",
-  "Restaurant Information": "Información del Restaurante",
-  "Restaurant Name": "Nombre del Restaurante",
-  "e.g., Tacos El Sol": "Ej. Tacos El Sol",
-  "Social Reason": "Razón Social",
-  "e.g., Tacos El Sol S.A. de C.V.": "Ej. Tacos El Sol S.A. de C.V.",
-  "Style": "Giro",
-  "Select a style": "Selecciona un giro",
-  "Italiano": "Italiano",
-  "Mar y tierra": "Mar y tierra",
-  "Carnes": "Carnes",
-  "Mariscos": "Mariscos",
-  "Mexicano": "Mexicano",
-  "Japonés": "Japonés",
-  "Otro": "Otro",
-  "Address": "Dirección",
-  "e.g., Main St 123, Downtown": "Ej. Calle Principal 123, Centro",
-  "Municipality or City": "Municipio o Delegación",
-  "e.g., Cuauhtémoc": "Ej. Cuauhtémoc",
-  "State": "Estado",
-  "Select a state": "Selecciona un estado",
-  "Contact Information (Administrator)": "Información de Contacto (Administrador)",
-  "Phone (will be the password)": "Teléfono (será la contraseña)",
-  "Minimum 6 digits": "Mínimo 6 dígitos",
-  "Email (will be the username)": "Email (será el usuario)",
-  "e.g., admin@tacoselsol.com": "ej. admin@tacoselsol.com",
-  "RFC": "RFC",
-  "e.g., SOLT850101XXX": "ej. SOLT850101XXX",
-  "Registering...": "Registrando...",
-  "Register Restaurant": "Registrar Restaurante",
-  "The email is already in use by another administrator.": "El correo electrónico ya está en uso por otro administrador.",
-  "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
-  "The email format is invalid.": "El formato del correo electrónico es inválido.",
-  "An error occurred during the operation.": "Ocurrió un error durante la operación.",
-  "Operation Error": "Error en la Operación",
-  "Registration Successful": "Registro Exitoso",
-  "The restaurant '{{name}}' and its administrator user have been registered.": "El restaurante '{{name}}' y su usuario administrador han sido registrados.",
-  "Administrator Dashboard": "Panel de Administrador",
+  "Administrator Dashboard": "Dashboard de Administrador",
   "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
   "Modules": "Módulos",
   "Orders": "Órdenes",
@@ -70,7 +10,74 @@
   "Kitchen": "Cocina",
   "Reports": "Reportes",
   "Digital Map": "Mapa Digital",
+  "Menu Clientes": "Menú Clientes",
   "Settings": "Configuración",
+  "Welcome back, {{name}}!": "¡Bienvenido de nuevo, {{name}}!",
+  "Login Successful": "Inicio de Sesión Exitoso",
+  "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
+  "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado inválido.",
+  "The email or password are incorrect.": "El correo electrónico o la contraseña son incorrectos.",
+  "Login Failed": "Falló el inicio de sesión",
+  "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
+  "Email required": "Email requerido",
+  "Please enter your email to reset your password.": "Por favor, introduce tu email para recuperar tu contraseña.",
+  "Recovery email sent": "Correo de recuperación enviado",
+  "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para recuperar tu contraseña.",
+  "Error": "Error",
+  "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, inténtalo de nuevo.",
+  "No user found with that email address.": "No se encontró ningún usuario con ese correo electrónico.",
+  "User (email)": "Usuario (email)",
+  "Password": "Contraseña",
+  "Hide password": "Ocultar contraseña",
+  "Show password": "Mostrar contraseña",
+  "Remember me": "Recordarme",
+  "Forgot your password?": "¿Olvidaste tu contraseña?",
+  "LOG IN": "INICIAR SESIÓN",
+  "Restaurant Management": "Gestión de Personal",
+  "Manage roles, permissions, and PINs for your staff.": "Administra roles, permisos y PINs de tu personal.",
+  "Add Employee": "Añadir Empleado",
+  "Could not load employees.": "No se pudieron cargar los empleados.",
+  "Restaurant information is not available yet. Please try again.": "La información del restaurante aún no está disponible. Por favor, inténtalo de nuevo.",
+  "Edit Employee": "Editar Empleado",
+  "Add New Employee": "Añadir Nuevo Empleado",
+  "Modify the employee information.": "Modifica la información del empleado.",
+  "Add a new employee to your team.": "Añade un nuevo empleado a tu equipo.",
+  "Module Permissions": "Permisos de Módulos",
+  "Select the modules this employee can access.": "Selecciona los módulos a los que este empleado puede acceder.",
+  "Open menu": "Abrir menú",
+  "Actions": "Acciones",
+  "Edit": "Editar",
+  "Permissions": "Permisos",
+  "Deactivate": "Desactivar",
+  "Activate": "Activar",
+  "Delete Permanently": "Eliminar Permanentemente",
+  "Are you sure?": "¿Estás seguro?",
+  "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?": "Esta acción marcará al usuario como inactivo y no podrá acceder al sistema. ¿Deseas continuar?",
+  "Cancel": "Cancelar",
+  "Yes, deactivate": "Sí, desactivar",
+  "Permanent Deletion": "Eliminación Permanente",
+  "This action is irreversible. The user will be deleted from the authentication system and database. Are you absolutely sure?": "Esta acción es irreversible. El usuario será eliminado del sistema de autenticación y de la base de datos. ¿Estás absolutamente seguro?",
+  "Yes, delete permanently": "Sí, eliminar permanentemente",
+  "Employee Deactivated": "Empleado Desactivado",
+  "The employee has been marked as inactive.": "El empleado ha sido marcado como inactivo.",
+  "Could not deactivate the employee.": "No se pudo desactivar el empleado.",
+  "Employee Activated": "Empleado Activado",
+  "The employee has been marked as active.": "El empleado ha sido marcado como activo.",
+  "Could not activate the employee.": "No se pudo activar el empleado.",
+  "Employee Deleted": "Empleado Eliminado",
+  "The employee has been permanently removed from the database.": "El empleado ha sido eliminado permanentemente de la base de datos.",
+  "Could not permanently delete the employee. Please contact support if the problem persists.": "No se pudo eliminar permanentemente al empleado. Por favor, contacta a soporte si el problema persiste.",
+  "Active": "Activo",
+  "Inactive": "Inactivo",
+  "No employees found. Add your first employee to get started.": "No se encontraron empleados. Añade tu primer empleado para empezar.",
+  "Administrator": "Administrador",
+  "Employee": "Empleado",
+  "Unknown": "Desconocido",
+  "Loading...": "Cargando...",
+  "Table and Assignment Management": "Gestión de Mesas y Asignaciones",
+  "Visualize your restaurant layout, manage tables, and track assignments in real-time.": "Visualiza el layout de tu restaurante, gestiona mesas y sigue las asignaciones en tiempo real.",
+  "Assign Areas & Tables": "Asignar Áreas y Mesas",
+  "Assign employees to specific areas and tables.": "Asigna empleados a áreas y mesas específicas.",
   "My Account": "Mi Cuenta",
   "Theme": "Tema",
   "Light": "Claro",
@@ -80,21 +87,89 @@
   "Change Password": "Cambiar Contraseña",
   "Log out": "Cerrar Sesión",
   "Toggle navigation menu": "Alternar menú de navegación",
-  "Toggle user menu": "Alternar menú de usuario",
+  "Menu": "Menú",
+  "Success": "Éxito",
+  "Password updated successfully.": "Contraseña actualizada con éxito.",
   "Passwords do not match.": "Las contraseñas no coinciden.",
   "Password must be at least 6 characters long.": "La contraseña debe tener al menos 6 caracteres.",
-  "Success": "Éxito",
-  "Password updated successfully.": "Contraseña actualizada exitosamente.",
   "Error updating password": "Error al actualizar la contraseña",
   "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "Esta operación es sensible y requiere autenticación reciente. Por favor, cierra sesión y vuelve a iniciarla para cambiar tu contraseña.",
-  "Enter your new password below. After saving, you will be logged out for security.": "Ingresa tu nueva contraseña a continuación. Después de guardar, se cerrará tu sesión por seguridad.",
+  "Enter your new password below. After saving, you will be logged out for security.": "Introduce tu nueva contraseña a continuación. Después de guardar, se cerrará tu sesión por seguridad.",
   "New Password": "Nueva Contraseña",
   "Confirm Password": "Confirmar Contraseña",
-  "Cancel": "Cancelar",
   "Save Changes": "Guardar Cambios",
-  "Collaborator Dashboard": "Panel del Colaborador",
+  "Dashboard": "Dashboard",
+  "First Name(s)": "Nombre(s)",
+  "e.g., Ana": "ej., Ana",
+  "Last Names": "Apellidos",
+  "e.g., Silva": "ej., Silva",
+  "Phone (will be the password)": "Teléfono (será la contraseña)",
+  "Minimum 6 digits": "Mínimo 6 dígitos",
+  "Email": "Correo Electrónico",
+  "e.g., user@email.com": "ej., usuario@email.com",
+  "Profile": "Perfil",
+  "Select a profile": "Selecciona un perfil",
+  "Register Employee": "Registrar Empleado",
+  "User Updated": "Usuario Actualizado",
+  "The employee '{{fullName}}' has been updated.": "El empleado '{{fullName}}' ha sido actualizado.",
+  "Employee Registered": "Empleado Registrado",
+  "The employee '{{fullName}}' has been successfully registered.": "El empleado '{{fullName}}' ha sido registrado con éxito.",
+  "An error occurred while {{action}} the employee.": "Ocurrió un error al {{action}} el empleado.",
+  "updating": "actualizar",
+  "registering": "registrar",
+  "This email is already in use by another user.": "Este correo electrónico ya está en uso por otro usuario.",
+  "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
+  "The email format is invalid.": "El formato del correo electrónico es inválido.",
+  "Save Permissions": "Guardar Permisos",
+  "Permissions Updated": "Permisos Actualizados",
+  "The employee's module access has been updated.": "El acceso a módulos del empleado ha sido actualizado.",
+  "Update Error": "Error de Actualización",
+  "Could not save the permissions.": "No se pudieron guardar los permisos.",
+  "Square Table": "Mesa Cuadrada",
+  "Circle Table": "Mesa Circular",
+  "Delete Room": "Eliminar Sala",
+  "Add Room": "Añadir Sala",
+  "Add New Room": "Añadir Nueva Sala",
+  "Create a new area or room to organize your tables.": "Crea una nueva área o sala para organizar tus mesas.",
+  "Room name (e.g., Terrace)": "Nombre de la sala (ej., Terraza)",
+  "Save": "Guardar",
+  "Table Name": "Nombre de la Mesa",
+  "Number of Seats": "Número de Asientos",
+  "This action cannot be undone. This will permanently delete the table from the room plan.": "Esta acción no se puede deshacer. Esto eliminará permanentemente la mesa del plano de la sala.",
+  "Delete": "Eliminar",
+  "Select an employee": "Selecciona un empleado",
+  "Tables": "Mesas",
+  "Assign all": "Asignar todo",
+  "Remove all": "Quitar todo",
+  "No tables in this area.": "No hay mesas en esta área.",
+  "Assignment Updated": "Asignación Actualizada",
+  "The assignment has been saved successfully.": "La asignación se ha guardado con éxito.",
+  "Could not save the assignment.": "No se pudo guardar la asignación.",
+  "Table": "Mesa",
+  "Modify the name and number of seats for the table.": "Modifica el nombre y el número de asientos de la mesa.",
+  "Table deleted": "Mesa eliminada",
+  "The table has been removed from the map.": "La mesa ha sido eliminada del mapa.",
+  "Table updated": "Mesa actualizada",
+  "Create a room to start adding tables.": "Crea una sala para empezar a añadir mesas.",
+  "No tables have been configured. Please go to the Digital Map in the admin dashboard.": "No se han configurado mesas. Por favor, ve al Mapa Digital en el panel de administrador.",
+  "Select a room": "Selecciona una sala",
+  "You must select a room to add a table.": "Debes seleccionar una sala para añadir una mesa.",
+  "Room added": "Sala añadida",
+  "The room \"{{name}}\" has been created.": "La sala \"{{name}}\" ha sido creada.",
+  "Action not allowed": "Acción no permitida",
+  "You cannot delete the only existing room.": "No puedes eliminar la única sala existente.",
+  "Room deleted": "Sala eliminada",
+  "The room \"{{name}}\" has been deleted.": "La sala \"{{name}}\" ha sido eliminada.",
+  "Collaborator Dashboard": "Dashboard de Colaborador",
   "Access your daily tasks and information.": "Accede a tus tareas e información diaria.",
   "Available Modules": "Módulos Disponibles",
   "No modules have been assigned to you. Please contact your administrator.": "No se te han asignado módulos. Por favor, contacta a tu administrador.",
-  "Dashboard": "Dashboard"
+  "Menu Options": "Opciones del Menú",
+  "Choose an action for the customer menu.": "Elige una acción para el menú de clientes.",
+  "Go to Menu": "Ir al Menú",
+  "Generate QR Code": "Generar Código QR",
+  "Scan this code to view the menu.": "Escanea este código para ver el menú.",
+  "Download": "Descargar",
+  "Print": "Imprimir",
+  "Print QR Code": "Imprimir Código QR"
 }
