las traducciones respectivas en archivos de idiomas

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,168 +1,28 @@
-
 {
-  "Hello": "Hello",
-  "Welcome back, {{name}}!": "Welcome back, {{name}}!",
-  "Login Successful": "Login Successful",
-  "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
-  "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
-  "The email or password are incorrect.": "The email or password are incorrect.",
-  "Login Failed": "Login Failed",
-  "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
-  "Email required": "Email required",
-  "Please enter your email to reset your password.": "Please enter your email to reset your password.",
-  "Recovery email sent": "Recovery email sent",
-  "Check your inbox to reset your password.": "Check your inbox to reset your password.",
-  "Error": "Error",
-  "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
-  "No user found with that email address.": "No user found with that email address.",
-  "User (email)": "User (email)",
-  "Password": "Password",
-  "Hide password": "Hide password",
-  "Show password": "Show password",
-  "Remember me": "Remember me",
-  "Forgot your password?": "Forgot your password?",
-  "LOG IN": "LOG IN",
-  "The first step to elevate your restaurant": "The first step to elevate your restaurant",
-  "Already have an account? Log in": "Already have an account? Log in",
-  "Register Your Restaurant": "Register Your Restaurant",
-  "Take the first step to elevate your restaurant.": "Take the first step to elevate your restaurant.",
-  "Restaurant Information": "Restaurant Information",
-  "Restaurant Name": "Restaurant Name",
-  "e.g., Tacos El Sol": "e.g., Tacos El Sol",
-  "Social Reason": "Social Reason",
-  "e.g., Tacos El Sol S.A. de C.V.": "e.g., Tacos El Sol S.A. de C.V.",
-  "Style": "Style",
-  "Select a style": "Select a style",
-  "Italiano": "Italian",
-  "Mar y tierra": "Surf and Turf",
-  "Carnes": "Meats",
-  "Mariscos": "Seafood",
-  "Mexicano": "Mexican",
-  "Japonés": "Japanese",
-  "Otro": "Other",
-  "Address": "Address",
-  "e.g., Main St 123, Downtown": "e.g., Main St 123, Downtown",
-  "Municipality or City": "Municipality or City",
-  "e.g., Cuauhtémoc": "e.g., Cuauhtémoc",
-  "State": "State",
-  "Select a state": "Select a state",
-  "Contact Information (Administrator)": "Contact Information (Administrator)",
-  "Phone": "Phone",
-  "Phone (will be the password)": "Phone (will be the password)",
-  "Minimum 6 digits": "Minimum 6 digits",
-  "Email": "Email",
-  "Email (will be the username)": "Email (will be the username)",
-  "e.g., admin@tacoselsol.com": "e.g., admin@tacoselsol.com",
-  "RFC": "RFC",
-  "e.g., SOLT850101XXX": "e.g., SOLT850101XXX",
-  "Saving...": "Saving...",
-  "Registering...": "Registering...",
-  "Save Changes": "Save Changes",
-  "Register Restaurant": "Register Restaurant",
-  "Update Successful": "Update Successful",
-  "The information for restaurant '{{name}}' has been updated.": "The information for restaurant '{{name}}' has been updated.",
-  "Registration Successful": "Registration Successful",
-  "The restaurant '{{name}}' and its administrator user have been registered.": "The restaurant '{{name}}' and its administrator user have been registered.",
-  "Operation Error": "Operation Error",
-  "An error occurred during the operation.": "An error occurred during the operation.",
-  "The email is already in use by another administrator.": "The email is already in use by another administrator.",
-  "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
-  "The email format is invalid.": "The email format is invalid.",
-  "Master Admin Dashboard": "Master Admin Dashboard",
-  "Welcome to the Tlacualli main control panel.": "Welcome to the Tlacualli main control panel.",
-  "Registered Restaurants": "Registered Restaurants",
-  "Master Admin Users": "Master Admin Users",
-  "Administrator Users": "Administrator Users",
-  "Collaborator Users": "Collaborator Users",
-  "Monthly Accesses": "Monthly Accesses",
-  "Accesses": "Accesses",
-  "No access data to display.": "No access data to display.",
-  "Actions by Restaurant": "Actions by Restaurant",
-  "Actions": "Actions",
-  "Unknown": "Unknown",
-  "ID": "ID",
-  "No action data to display.": "No action data to display.",
-  "Restaurants": "Restaurants",
-  "Master Users": "Master Users",
-  "My Account": "My Account",
-  "Theme": "Theme",
-  "Light": "Light",
-  "Dark": "Dark",
-  "System": "System",
-  "Language": "Language",
-  "Change Password": "Change Password",
-  "Log out": "Log out",
-  "Toggle navigation menu": "Toggle navigation menu",
-  "Menu": "Menu",
-  "Passwords do not match.": "Passwords do not match.",
-  "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
-  "Success": "Success",
-  "Password updated successfully.": "Password updated successfully.",
-  "Error updating password": "Error updating password",
-  "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.",
-  "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
-  "New Password": "New Password",
-  "Confirm Password": "Confirm Password",
-  "Cancel": "Cancel",
-  "Go Back": "Go Back",
-  "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
-  "Client Dashboard": "Client Dashboard",
-  "Your personal space.": "Your personal space.",
-  "Welcome!": "Welcome!",
-  "View your order history, manage your payment methods, and update your profile.": "View your order history, manage your payment methods, and update your profile.",
-  "View My Orders": "View My Orders",
-  "Settings": "Settings",
-  "Dashboard": "Dashboard",
-  "Orders": "Orders",
-  "Menu & Recipes": "Menu & Recipes",
-  "Staff": "Staff",
-  "Inventory": "Inventory",
-  "Kitchen": "Kitchen",
-  "Reports": "Reports",
-  "Digital Map": "Digital Map",
-  "Menu Clientes": "Customer Menu",
-  "Collaborator Dashboard": "Collaborator Dashboard",
-  "Access your daily tasks and information.": "Access your daily tasks and information.",
-  "Available Modules": "Available Modules",
-  "No modules have been assigned to you. Please contact your administrator.": "No modules have been assigned to you. Please contact your administrator.",
-  "Administrator Dashboard": "Administrator Dashboard",
-  "Manage your restaurant's operations.": "Manage your restaurant's operations.",
-  "Modules": "Modules",
-  "Basic Information": "Basic Information",
-  "Update your restaurant's information.": "Update your restaurant's information.",
-  "Logo & Icon": "Logo & Icon",
-  "Upload your brand images.": "Upload your brand images.",
-  "Taxes": "Taxes",
-  "Configure tax rates.": "Configure tax rates.",
-  "Restaurant Settings": "Restaurant Settings",
-  "Manage your restaurant's general information.": "Manage your restaurant's general information.",
-  "Loading...": "Loading...",
-  "Logo File (max 1MB)": "Logo File (max 1MB)",
-  "Icon File (max 1MB)": "Icon File (max 1MB)",
-  "Upload Images": "Upload Images",
-  "IVA Rate (%)": "IVA Rate (%)",
-  "Save IVA Rate": "Save IVA Rate",
-  "Restaurant data could not be loaded.": "Restaurant data could not be loaded.",
-  "IVA Updated": "IVA Updated",
-  "The new IVA rate has been saved successfully.": "The new IVA rate has been saved successfully.",
-  "Could not save the IVA rate.": "Could not save the IVA rate.",
-  "No file selected": "No file selected",
-  "Please select a file to upload.": "Please select a file to upload.",
-  "Upload successful": "Upload successful",
-  "Your images have been updated.": "Your images have been updated.",
-  "Upload failed": "Upload failed",
-  "An error occurred while uploading your images.": "An error occurred while uploading your images.",
-  "Invalid File Type": "Invalid File Type",
-  "Please select an image file.": "Please select an image file.",
-  "File too large": "File too large",
-  "Please select an image smaller than 1MB.": "Please select an image smaller than 1MB.",
-  "Selected": "Selected",
-  "Menu Options": "Menu Options",
-  "Choose an action for the customer menu.": "Choose an action for the customer menu.",
-  "Go to Menu": "Go to Menu",
-  "Generate QR Code": "Generate QR Code",
-  "Scan this code to view the menu.": "Scan this code to view the menu.",
-  "Download": "Download",
-  "Print": "Print",
-  "Print QR Code": "Print QR Code"
+    "Billing": "Billing",
+    "Billing & Subscription": "Billing & Subscription",
+    "Manage your plan, view payment history, and see your account details.": "Manage your plan, view payment history, and see your account details.",
+    "Subscription Details": "Subscription Details",
+    "Active": "Active",
+    "Inactive": "Inactive",
+    "Current Plan": "Current Plan",
+    "Demo Gratuita": "Free Demo",
+    "Plan Esencial": "Essential Plan",
+    "Plan Pro": "Pro Plan",
+    "Plan Ilimitado": "Unlimited Plan",
+    "Unknown": "Unknown",
+    "Monthly Cost": "Monthly Cost",
+    "+IVA": "+VAT",
+    "Registration Date": "Registration Date",
+    "Next Payment Date": "Next Payment Date",
+    "Upgrade or Change Plan": "Upgrade or Change Plan",
+    "Payment History": "Payment History",
+    "Date": "Date",
+    "Amount": "Amount",
+    "Status": "Status",
+    "Invoice": "Invoice",
+    "Paid": "Paid",
+    "Download": "Download",
+    "Restaurant Details": "Restaurant Details",
+    "Restaurant data could not be loaded.": "Restaurant data could not be loaded."
 }
