--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,168 +1,28 @@
-
 {
-    "Hello": "Hola",
-    "Welcome back, {{name}}!": "¡Bienvenido de nuevo, {{name}}!",
-    "Login Successful": "Inicio de Sesión Exitoso",
-    "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
-    "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado inválido.",
-    "The email or password are incorrect.": "El correo electrónico o la contraseña son incorrectos.",
-    "Login Failed": "Falló el Inicio de Sesión",
-    "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
-    "Email required": "Correo electrónico requerido",
-    "Please enter your email to reset your password.": "Por favor, introduce tu correo electrónico para restablecer tu contraseña.",
-    "Recovery email sent": "Correo de recuperación enviado",
-    "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
-    "Error": "Error",
-    "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, inténtalo de nuevo.",
-    "No user found with that email address.": "No se encontró ningún usuario con esa dirección de correo electrónico.",
-    "User (email)": "Usuario (correo electrónico)",
-    "Password": "Contraseña",
-    "Hide password": "Ocultar contraseña",
-    "Show password": "Mostrar contraseña",
-    "Remember me": "Recordarme",
-    "Forgot your password?": "¿Olvidaste tu contraseña?",
-    "LOG IN": "INICIAR SESIÓN",
-    "The first step to elevate your restaurant": "El primer paso para elevar tu restaurante",
-    "Already have an account? Log in": "¿Ya tienes una cuenta? Inicia sesión",
-    "Register Your Restaurant": "Registra Tu Restaurante",
-    "Take the first step to elevate your restaurant.": "Da el primer paso para elevar tu restaurante.",
-    "Restaurant Information": "Información del Restaurante",
-    "Restaurant Name": "Nombre del Restaurante",
-    "e.g., Tacos El Sol": "ej., Tacos El Sol",
-    "Social Reason": "Razón Social",
-    "e.g., Tacos El Sol S.A. de C.V.": "ej., Tacos El Sol S.A. de C.V.",
-    "Style": "Giro",
-    "Select a style": "Selecciona un giro",
-    "Italiano": "Italiano",
-    "Mar y tierra": "Mar y tierra",
-    "Carnes": "Carnes",
-    "Mariscos": "Mariscos",
-    "Mexicano": "Mexicano",
-    "Japonés": "Japonés",
-    "Otro": "Otro",
-    "Address": "Dirección",
-    "e.g., Main St 123, Downtown": "ej., Av. Principal 123, Centro",
-    "Municipality or City": "Municipio o Delegación",
-    "e.g., Cuauhtémoc": "ej., Cuauhtémoc",
-    "State": "Estado",
-    "Select a state": "Selecciona un estado",
-    "Contact Information (Administrator)": "Información de Contacto (Administrador)",
-    "Phone": "Teléfono",
-    "Phone (will be the password)": "Teléfono (será la contraseña)",
-    "Minimum 6 digits": "Mínimo 6 dígitos",
-    "Email": "Correo Electrónico",
-    "Email (will be the username)": "Correo (será el usuario)",
-    "e.g., admin@tacoselsol.com": "ej., admin@tacoselsol.com",
-    "RFC": "RFC",
-    "e.g., SOLT850101XXX": "ej., SOLT850101XXX",
-    "Saving...": "Guardando...",
-    "Registering...": "Registrando...",
-    "Save Changes": "Guardar Cambios",
-    "Register Restaurant": "Registrar Restaurante",
-    "Update Successful": "Actualización Exitosa",
-    "The information for restaurant '{{name}}' has been updated.": "La información del restaurante '{{name}}' ha sido actualizada.",
-    "Registration Successful": "Registro Exitoso",
-    "The restaurant '{{name}}' and its administrator user have been registered.": "El restaurante '{{name}}' y su usuario administrador han sido registrados.",
-    "Operation Error": "Error en la Operación",
-    "An error occurred during the operation.": "Ocurrió un error durante la operación.",
-    "The email is already in use by another administrator.": "El correo electrónico ya está en uso por otro administrador.",
-    "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
-    "The email format is invalid.": "El formato del correo electrónico es inválido.",
-    "Master Admin Dashboard": "Dashboard Maestro",
-    "Welcome to the Tlacualli main control panel.": "Bienvenido al panel de control principal de Tlacualli.",
-    "Registered Restaurants": "Restaurantes Registrados",
-    "Master Admin Users": "Usuarios Maestros",
-    "Administrator Users": "Usuarios Administradores",
-    "Collaborator Users": "Usuarios Colaboradores",
-    "Monthly Accesses": "Accesos Mensuales",
-    "Accesses": "Accesos",
-    "No access data to display.": "No hay datos de acceso para mostrar.",
-    "Actions by Restaurant": "Acciones por Restaurante",
-    "Actions": "Acciones",
+    "Billing": "Facturación",
+    "Billing & Subscription": "Facturación y Suscripción",
+    "Manage your plan, view payment history, and see your account details.": "Gestiona tu plan, ve tu historial de pagos y consulta los detalles de tu cuenta.",
+    "Subscription Details": "Detalles de la Suscripción",
+    "Active": "Activo",
+    "Inactive": "Inactivo",
+    "Current Plan": "Plan Actual",
+    "Demo Gratuita": "Demo Gratuita",
+    "Plan Esencial": "Plan Esencial",
+    "Plan Pro": "Plan Pro",
+    "Plan Ilimitado": "Plan Ilimitado",
     "Unknown": "Desconocido",
-    "ID": "ID",
-    "No action data to display.": "No hay datos de acciones para mostrar.",
-    "Restaurants": "Restaurantes",
-    "Master Users": "Usuarios Maestros",
-    "My Account": "Mi Cuenta",
-    "Theme": "Tema",
-    "Light": "Claro",
-    "Dark": "Oscuro",
-    "System": "Sistema",
-    "Language": "Idioma",
-    "Change Password": "Cambiar Contraseña",
-    "Log out": "Cerrar Sesión",
-    "Toggle navigation menu": "Alternar menú de navegación",
-    "Menu": "Menú",
-    "Passwords do not match.": "Las contraseñas no coinciden.",
-    "Password must be at least 6 characters long.": "La contraseña debe tener al menos 6 caracteres.",
-    "Success": "Éxito",
-    "Password updated successfully.": "Contraseña actualizada exitosamente.",
-    "Error updating password": "Error al actualizar la contraseña",
-    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "Esta operación es sensible y requiere autenticación reciente. Por favor, cierra sesión y vuelve a iniciarla para cambiar tu contraseña.",
-    "Enter your new password below. After saving, you will be logged out for security.": "Introduce tu nueva contraseña a continuación. Después de guardar, se cerrará tu sesión por seguridad.",
-    "New Password": "Nueva Contraseña",
-    "Confirm Password": "Confirmar Contraseña",
-    "Cancel": "Cancelar",
-    "Go Back": "Regresar",
-    "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
-    "Client Dashboard": "Panel de Cliente",
-    "Your personal space.": "Tu espacio personal.",
-    "Welcome!": "¡Bienvenido!",
-    "View your order history, manage your payment methods, and update your profile.": "Ve tu historial de pedidos, gestiona tus métodos de pago y actualiza tu perfil.",
-    "View My Orders": "Ver Mis Pedidos",
-    "Settings": "Configuración",
-    "Dashboard": "Dashboard",
-    "Orders": "Órdenes",
-    "Menu & Recipes": "Menú y Recetas",
-    "Staff": "Personal",
-    "Inventory": "Inventario",
-    "Kitchen": "Cocina",
-    "Reports": "Reportes",
-    "Digital Map": "Mapa Digital",
-    "Menu Clientes": "Menú Clientes",
-    "Collaborator Dashboard": "Dashboard de Colaborador",
-    "Access your daily tasks and information.": "Accede a tus tareas e información diaria.",
-    "Available Modules": "Módulos Disponibles",
-    "No modules have been assigned to you. Please contact your administrator.": "No se te han asignado módulos. Por favor, contacta a tu administrador.",
-    "Administrator Dashboard": "Dashboard de Administrador",
-    "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
-    "Modules": "Módulos",
-    "Basic Information": "Información Básica",
-    "Update your restaurant's information.": "Actualiza la información de tu restaurante.",
-    "Logo & Icon": "Logo e Ícono",
-    "Upload your brand images.": "Sube las imágenes de tu marca.",
-    "Taxes": "Impuestos",
-    "Configure tax rates.": "Configura las tasas de impuestos.",
-    "Restaurant Settings": "Configuración del Restaurante",
-    "Manage your restaurant's general information.": "Gestiona la información general de tu restaurante.",
-    "Loading...": "Cargando...",
-    "Logo File (max 1MB)": "Archivo del Logo (máx 1MB)",
-    "Icon File (max 1MB)": "Archivo del Ícono (máx 1MB)",
-    "Upload Images": "Subir Imágenes",
-    "IVA Rate (%)": "Tasa de IVA (%)",
-    "Save IVA Rate": "Guardar Tasa de IVA",
-    "Restaurant data could not be loaded.": "No se pudieron cargar los datos del restaurante.",
-    "IVA Updated": "IVA Actualizado",
-    "The new IVA rate has been saved successfully.": "La nueva tasa de IVA se ha guardado exitosamente.",
-    "Could not save the IVA rate.": "No se pudo guardar la tasa de IVA.",
-    "No file selected": "No se ha seleccionado ningún archivo",
-    "Please select a file to upload.": "Por favor, selecciona un archivo para subir.",
-    "Upload successful": "Subida exitosa",
-    "Your images have been updated.": "Tus imágenes han sido actualizadas.",
-    "Upload failed": "Falló la subida",
-    "An error occurred while uploading your images.": "Ocurrió un error al subir tus imágenes.",
-    "Invalid File Type": "Tipo de Archivo Inválido",
-    "Please select an image file.": "Por favor, selecciona un archivo de imagen.",
-    "File too large": "Archivo demasiado grande",
-    "Please select an image smaller than 1MB.": "Por favor, selecciona una imagen de menos de 1MB.",
-    "Selected": "Seleccionado",
-    "Menu Options": "Opciones del Menú",
-    "Choose an action for the customer menu.": "Elige una acción para el menú de clientes.",
-    "Go to Menu": "Ir al Menú",
-    "Generate QR Code": "Generar Código QR",
-    "Scan this code to view the menu.": "Escanea este código para ver el menú.",
+    "Monthly Cost": "Costo Mensual",
+    "+IVA": "+IVA",
+    "Registration Date": "Fecha de Registro",
+    "Next Payment Date": "Próxima Fecha de Pago",
+    "Upgrade or Change Plan": "Actualizar o Cambiar de Plan",
+    "Payment History": "Historial de Pagos",
+    "Date": "Fecha",
+    "Amount": "Monto",
+    "Status": "Estado",
+    "Invoice": "Factura",
+    "Paid": "Pagado",
     "Download": "Descargar",
-    "Print": "Imprimir",
-    "Print QR Code": "Imprimir Código QR"
+    "Restaurant Details": "Detalles del Restaurante",
+    "Restaurant data could not be loaded.": "No se pudieron cargar los datos del restaurante."
 }
